--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
     "@types/three": "^0.168.0",
     "class-variance-authority": "^0.7.0",
